# ai-book

./: .gitignore  404.html  README.md  chat-widget.css  chat-widget.js  chat-widget.js.bak  docusaurus.config.js  index.html  mock_backend.py  package.json  run_backend.py  sidebars.js  sitemap.xml  start_backend.py  tsconfig.json
.claude/: settings.local.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
LayoutWrapper/: index.html
advanced-locomotion/advanced-bipedal-locomotion/: index.html
assets/css/: styles.67c3ba22.css  styles.96631ad9.css  styles.9b6221dd.css
assets/js/: 033302ea.0d8c5ab2.js  033302ea.b0a44674.js  033302ea.fc0b3ca9.js  14eb3368.25d90fb4.js  14eb3368.7c71e31e.js  (+94 more)
backend/: .env  .pylintrc  agent.py  main.py  pyproject.toml  requirements.txt  retrieving.py
backend/src/: main.py
backend/src/api/: __init__.py  deps.py
backend/src/api/v1/: __init__.py  chat.py  embed.py  search.py  upsert.py
backend/src/models/: chat.py  document.py  frontend_config.py
backend/src/services/: chat_service.py  cors_service.py  embedding_service.py  mock_vector_store_service.py  retrieval_service.py  vector_store_service.py
backend/src/tools/: retrieval_tool.py
docs/: glossary.md  references.md
glossary/: index.html
human-robot-collaboration/: index.html
modules/: index.html
references/: index.html
static/: chat-widget.css  chat-widget.js
(+100 files in other folders)
