[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.20.0",
    "fastapi>=0.124.2",
    "openai>=2.11.0",
    "openai-agents>=0.6.3",
    "qdrant-client>=1.16.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
]
